--- a/FixIt/app/src/main/res/values/strings.xml
+++ b/FixIt/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Fix It</string>
+    <string name="open">Fix It</string>
+    <string name="close">Fix It</string>
 </resources>
