--- a/FixIt/app/src/main/res/values/strings.xml
+++ b/FixIt/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
     <string name="at_least_8_characters">At least 8 characters</string>
     <string name="new_password">New password</string>
     <string name="email">Email</string>
-    <string name="username">Username</string>
     <string name="sign_up">Sign Up</string>
     <string name="already_a_user_login">Already a user? Login</string>
     <string name="name">Name</string>
@@ -29,9 +28,20 @@
     <string name="scan">Scan</string>
     <string name="start_scanning">Start scanning</string>
     <string name="date_type">DD-MM-YYYY</string>
-    <string name="city_of_tshwane_account_number_hint">City of Tshwane account number</string>
+    <string name="tshwane_account_number_hint">Tshwane account number</string>
     <string name="city_s_account_no">City\'s Account No. :</string>
     <string name="fix_date">Fix date :</string>
+    <string name="alt_contact">Alt Contact :</string>
+    <string name="alternative_contact">Alternative Contact</string>
+    <string name="type">Type:</string>
+    <string name="above_ground">Above ground</string>
+    <string name="underground">Underground</string>
+    <string name="submit">submit</string>
+    <string name="cancel">Cancel</string>
+    <string name="username">Username</string>
+    <string name="sign_in">Sign In</string>
+    <string name="password">Password</string>
+    <string name="do_not_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
     <string-array name="arr_location">
         <item>Public</item>
         <item>Yard</item>
